--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,10 +73,10 @@ x-airflow-common:
     # The following line can be used to set a custom config file, stored in the local config folder
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
   volumes:
-    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
-    - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
-    - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
-    - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - $PWD/dags:/opt/airflow/dags
+    - $PWD/logs:/opt/airflow/logs
+    - $PWD/config:/opt/airflow/config
+    - $PWD/plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -340,6 +340,16 @@ services:
       <<: *airflow-common-env
     user: "50000:0"
     entrypoint: [ "/bin/bash", "-c" ]
+
+  data-warehouse:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: wh_user
+      POSTGRES_PASSWORD: wh_password
+      POSTGRES_DB: gold
+    volumes:
+      - postgres-db-volume:/var/lib/postgresql/data
+    restart: always
 
 volumes:
   postgres-db-volume:
